--- a/joguinho/css/style.css
+++ b/joguinho/css/style.css
@@ -5,41 +5,18 @@
 body{
     background-color: rgb(6, 6, 53);
 }
-#divBusca {
-    background-color: #ffffff;
-    border: solid 1px;
-    border-radius: 15px;
-    width: 330px;
-    display: flex; /* Usar flexbox para alinhar o conteúdo */
-}
 
-#txtBusca {
-    background-color: transparent;
-    padding-left: 10px;
-    font-style: italic;
-    font-size: 18px;
-    border: none;
-    height: 30px;
-    width: 300px;
-    flex-grow: 1; /* Faz com que a caixa de texto ocupe todo o espaço disponível */
-}
-
-#btnBusca {
-    height: 28px; /* A altura do botão agora é igual à altura da caixa de texto */
-    width: 35px; /* Largura do botão, pode ajustar conforme necessário */
-    background-color: #0027a8;
-    border-radius: 5px;
-    border: 2px solid #000000;
-    
-}
 .container{
     display: flex; /* Usa flexbox para alinhar os itens horizontalmente */
     align-items: center; /* Alinha os itens verticalmente ao centro */
     justify-content: flex-start; /* Alinha os itens à esquerda */
     
 }
-.containerimg img {
-    width: 50px; /* Define a largura da imagem */
-    height: 25px; /* Define a altura da imagem */
-    margin: 25px;
+.lista{
+    max-width:300px;
+    max-height:200px;
+    width: 40px;
+    height: 30px;
+    
 }
+
