--- a/joguinho/css/style.css
+++ b/joguinho/css/style.css
@@ -13,10 +13,15 @@ body{
     
 }
 .lista{
-    max-width:300px;
-    max-height:200px;
     width: 40px;
     height: 30px;
-    
+}
+.lupa{
+    width: 40px;
+    height: 30px;
+}
+form{
+    padding-right: 100px;
+    width: 600px;
 }
 
