--- a/joguinho/css/style.css
+++ b/joguinho/css/style.css
@@ -1,12 +1,20 @@
 #log{
     height: 150px;
-    margin-right: 200px;
+    margin-right: 100px;
     
 }
 body{
     background-color: rgb(6, 6, 53);
 }
-
+header{
+  background-color: rgb(0, 53, 197);
+}
+.container{
+    display: flex; /* Usa flexbox para alinhar os itens horizontalmente */
+    justify-content: center; /* Alinha os itens verticalmente ao centro */
+    align-items: center;
+    
+}
 /* Estilizando o container do formulário de busca */
 #divBusca {
     display: flex;               /* Usando flexbox para alinhamento */
@@ -17,7 +25,7 @@ body{
   
   /* Estilizando o campo de texto */
   #txtBusca {
-    width: 250px;                /* Define a largura do campo de texto */
+    width: 500px;                /* Define a largura do campo de texto */
     padding: 10px;               /* Espaçamento interno */
     font-size: 16px;             /* Tamanho da fonte */
     border: 2px solid #ccc;      /* Cor e espessura da borda */
@@ -48,17 +56,15 @@ body{
     transform: scale(1.1);      /* Aumenta um pouco o tamanho do ícone */
   }  
 
-.container{
-    display: flex; /* Usa flexbox para alinhar os itens horizontalmente */
-    align-items: center; /* Alinha os itens verticalmente ao centro */
-    justify-content: flex-start; /* Alinha os itens à esquerda */
-    
-}
+
 /* Estilizando o contêiner da navegação */
 .lista {
     padding: 10px 0;            /* Padding vertical para dar espaçamento */
     display: flex;              /* Usando flexbox para os itens ficarem em linha */
     justify-content: center;    /* Centraliza os itens horizontalmente */
+    margin-left: 100px;          /*coloca um espaçamento nas img para o lado esquerdo*/ 
+   
+
   }
   
   /* Estilizando a lista */
@@ -97,4 +103,81 @@ body{
     transform: scale(1.1);      /* Aumenta a imagem quando o mouse passa sobre o link */
     opacity: 0.8;               /* Torna a imagem ligeiramente transparente */
   }
+  * {box-sizing: border-box}
+  body {font-family: Verdana, sans-serif; margin:0}
+  .mySlides {display: none}
+  img {vertical-align: middle;}
   
+  /* Slideshow container */
+  .slideshow-container {
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+  }
+  
+  /* Next & previous buttons */
+  .prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+  }
+  
+  /* Position the "next button" to the right */
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+  }
+  
+  /* Caption text */
+  .text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+  }
+  
+  /* Number text (1/3 etc) */
+  .numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
+  
+  .active, .dot:hover {
+    background-color: #717171;
+  }
+  
+  /* Fading animation */
+  .fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  
+  @keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+  }
+  
+  /* On smaller screens, decrease text size */
+  @media only screen and (max-width: 300px) {
+    .prev, .next,.text {font-size: 11px}
+  }
